# fullstack-rs

./: .gitignore  README.md
backend/: Cargo.toml  config.yml
backend/docs/: ToDo.md
backend/examples/: rbatis_adapter_sample.rs  rbatis_sample.html  rbatis_sample.rs  signal_sample.rs  starwift_http.rs  starwift_tcp.rs  tidb_diesel_ssl.rs  tidb_origin_ssl.rs  tidb_rbatis_ssl.rs  tidb_sea_orm_ssl.rs  tidb_sqlx_ssl.rs
backend/src/: main.rs
backend/src/casbin_rbatis_adapter/: actions.rs  adapter.rs  mod.rs  tables.rs
backend/src/cmd/: configcmd.rs  mod.rs  rootcmd.rs  start.rs  stop.rs
backend/src/commons/: mod.rs  sysutiles.rs
backend/src/configure/: config_global.rs  mod.rs
backend/src/embedfiles/: rbac_with_domains_model.conf  rbac_with_domains_policy.csv
backend/src/errors/: global_error.rs  mod.rs
backend/src/httpquerry/: globalhttpclient.rs  mod.rs  request.rs
backend/src/httpserver/: httpserver.rs  mod.rs
backend/src/httpserver/dao/: dao_test.rs  mod.rs
backend/src/httpserver/exception/: error.rs  mod.rs
backend/src/httpserver/handlers/: authhandler.rs  config.rs  handler_httpquery.rs  handler_login.rs  handler_mysql.rs  handler_rawkv.rs.bak  handler_redis.rs  handler_root.rs  handler_txn.rs  handler_user.rs  mod.rs
backend/src/httpserver/middleware/: authentication.rs  mod.rs
backend/src/httpserver/module/: common_module.rs  mod.rs  request_module.rs  response_module.rs
backend/src/httpserver/routers/: mod.rs  root.rs
backend/src/httpserver/service/: mod.rs  service_mysql.rs  service_redis.rs  service_tikv_raw.rs  service_tikv_txn.rs.bak  service_user.rs
backend/src/interact/: cli.rs
backend/src/logger/: logger.rs
backend/src/privilege/: authentication.rs  authentication_test.rs  mod.rs  policy.rs  user.rs  user_test.rs
backend/src/resources/: embed_resources.rs  init_resources.rs  mod.rs  mysql_rbatis_resource.rs  redis_resource.rs  tikv.rs.bak
frontend/: package-lock.json
